# maxutils

./: .gitignore  CMakeLists.txt  attr.hpp  jit_matrix_helpers.hpp
cmake/: magic_enum.cmake
detail/: attr_helpers.hpp  concepts.hpp  functors.hpp  member_pointer.hpp
include/maxutils/: attr.hpp  attributes.hpp  jit_matrix_helpers.hpp  jit_matrix_view.hpp  jit_matrix_view_v2.hpp  jit_opencv.hpp  jit_type_sym.hpp  named_matrix.hpp  object_handle.hpp  t_object_raii.hpp
include/maxutils/detail/: attr_helpers.hpp  fixed_string.hpp  reflection.hpp
patchers/: test_attr.maxtest.maxpat
test/: CMakeLists.txt
test/src/test_attr/: CMakeLists.txt  meta.cpp  test_attr.cpp
